Replace pre-commit/action with faster tox-dev/action-pre-commit-uv

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,9 +19,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-          cache: pip
-          cache-dependency-path: .github/workflows/lint.yml
-      - uses: pre-commit/action@v3.0.1
+      - uses: tox-dev/action-pre-commit-uv@v1
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
