--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
-          cache: pip
-          cache-dependency-path: pyproject.toml
 
-      - name: Install tox
-        run: |
-          python -m pip install tox
+      - name: Install uv
+        uses: hynek/setup-cached-uv@v2
 
       - name: Run tests
-        run: tox -e py
+        run: uvx --with tox-uv tox -e py
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
