--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,13 +42,12 @@ repos:
         args:
           [
             --ignore-missing-imports,
-            --install-types,
-            --non-interactive,
             --pretty,
             --show-error-codes,
             .,
           ]
         pass_filenames: false
+        additional_dependencies: ["types-requests"]
 
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: 2.2.4
