--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,21 +23,19 @@ jobs:
           # fetch all branches and tags
           # ref actions/checkout#448
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
-          cache: pip
-          cache-dependency-path: pyproject.toml
 
-      - name: Install tox
-        run: |
-          python -m pip install tox
+      - name: Install uv
+        uses: hynek/setup-cached-uv@v2
 
       - name: Run tests
-        run: tox -e py
+        run: uvx --with tox-uv tox -e py
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
